desarrollando ruta y cercanos

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,11 @@
   <style>
     /* Set the size of the div element that contains the map */
     #map {
-      height: 400px;  /* The height is 400 pixels */
-      width: 100%;  /* The width is the width of the web page */
-     }
+      height: 400px;
+      /* The height is 400 pixels */
+      width: 100%;
+      /* The width is the width of the web page */
+    }
   </style>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -42,8 +44,11 @@
 
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-  <script type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqPRGlyJthwqt-0wsuQ7Of9o_EPlbsAMU&libraries=places">
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaft-cdp8vyB1xlGpuTy2jkkADgoz0voE&callback=initMap"
+    type="text/javascript"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaft-cdp8vyB1xlGpuTy2jkkADgoz0voE&libraries=places">
     </script>
 
   <div id="root"></div>
